2005-04-02 Vangelis Rokas <vrokas AT users.sourceforge.net>

        * device/include/asm/pic16/features.h,
        * pic18f*.h headers,
        * device/include/pic16/adc.h,
        * device/include/pic16/delay.h,
        * device/include/pic16/i2c.h,
        * device/include/pic16/malloc.h,
        * device/include/pic16/stdio.h,
        * device/include/pic16/stdlib.h,
        * device/include/pic16/string.h,
        * device/lib/pic16/libc/stdio/printf_tiny.c,
        * device/lib/pic16/libc/stdio/printf_small.c,
        * device/lib/pic16/libc/stdio/strmgpsim.c,
        * device/lib/pic16/libc/stdio/strmmssp.c,
        * device/lib/pic16/libc/stdio/strmusart.c,
        * device/lib/pic16/libc/stdio/vfprintf.c,
        * device/lib/pic16/libc/stdlib/ltoa.c,
        * device/lib/pic16/libc/stdlib/putchar.c,
        * device/lib/pic16/libc/stdlib/x_ftoa.c,
        * device/lib/pic16/libc/stdlib/memchrpgm.c,
        * device/lib/pic16/libc/stdlib/memchrram.c,
        * device/lib/pic16/libc/stdlib/memcpypgm2ram.c,
        * device/lib/pic16/libc/stdlib/memcpyram2ram.c,
        * device/lib/pic16/libio/adc/adcbusy.c,
        * device/lib/pic16/libio/adc/adcread.c,
        * device/lib/pic16/libio/adc/adcsetch.c,
        * device/lib/pic16/libio/usart/ubaud.c,
        * device/lib/pic16/libio/usart/ubusy.c,
        * device/lib/pic16/libio/usart/udrdy.c,
        * device/lib/pic16/libio/usart/uopen.c,
        * device/lib/pic16/libio/usart/uputc.c,
        * device/lib/pic16/libsdcc/gptr/gptrget1.c,
        * device/lib/pic16/libsdcc/gptr/gptrget2.c,
        * device/lib/pic16/libsdcc/gptr/gptrget3.c,
        * device/lib/pic16/libsdcc/gptr/gptrget4.c,
        * device/lib/pic16/libsdcc/gptr/gptrput1.c,
        * device/lib/pic16/libsdcc/gptr/gptrput2.c,
        * device/lib/pic16/libsdcc/gptr/gptrput3.c,
        * device/lib/pic16/libsdcc/gptr/gptrput4.c: modified all SDCC
        specific keywords to double underlined form,